--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,12 @@
     "mysql2": "^3.10.2",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "validator": "^13.12.0"
   },
   "name": "school-management",
   "version": "1.0.0",
   "main": "1507",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon server.js"
   },
