--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
     "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "validator": "^13.12.0"
@@ -17,9 +18,17 @@
   "version": "1.0.0",
   "main": "1507",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon server.js",
+    "build-src": "babel src -d build --copy-files",
+    "build": "node build/server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0"
+  }
 }
