--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,7 @@
 FROM node:20-alpine
 
-WORKDIR /app/server
-COPY package*.json ./
+WORKDIR /server
+COPY package.json .
 RUN npm install
-RUN npm install -g @babel/core @babel/cli
 COPY . .
-RUN npm run build-src
-CMD ["npm", "run", "build"]
+CMD npm start
