--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "start": "node src/server.js",
     "dev": "nodemon server.js",
     "build-src": "babel src -d build --copy-files",
-    "build": "node build/server.js"
+    "build": "node server.js"
   },
   "author": "",
   "license": "ISC",
