--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
   "version": "1.0.0",
   "main": "1507",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
