--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   "version": "1.0.0",
   "main": "1507",
   "scripts": {
-    "start": "server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "author": "",
