--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,10 @@
-# FROM node:20-alpine
+FROM node:20-alpine
 
-# WORKDIR /client
-# COPY package.json .
-# RUN npm install
-# COPY . .
-# EXPOSE 5173
-# CMD ["npm", "start"]
+WORKDIR /client
+COPY package.json .
+RUN npm install
+COPY . .
+EXPOSE 5173
+CMD ["npm", "start"]
 
-FROM nginx:1.27.0-alpine
+# FROM nginx:1.27.0-alpine
